// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform mixins 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};
    color: \${vars.colour.primaryDark};
  \`;
}

export const adspot468X60728X90Pos1Container = css\`
  \${adExact('125px', '700px')};
  color: blue;
\`;
"
`;

exports[`transform nested class no vars 1`] = `
"import { css } from 'emotion';

export const button = css\`
  display: flex;
  align-items: center;
  justify-content: center;
  display: block;
\`;

export const foo = css\`
  display: block;
\`;
"
`;

exports[`transform placeholder 1`] = `
"import { css } from 'emotion';

const messageShared = css\`
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
\`;

export const message = css\`
  \${messageShared};
\`;

export const success = css\`
  \${messageShared};
  border-color: green;
\`;
"
`;

exports[`transform sass vars to import 1`] = `
"import { css } from 'emotion';
import { variables as vars } from '@domain-group/fe-brary';

export const button = css\`
  color: \${vars.colour.primaryDark};
  font-size: \${vars.font.h6FontSize};
\`;

export const bar = css\`
  font-size: \${vars.font.h6FontSize};
\`;
"
`;

exports[`transform simple class no vars 1`] = `
"import { css } from 'emotion';

export const button = css\`
  display: inline-flex;
  align-items: center;
  justify-content: center;
\`;
"
`;
